<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/CardView01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardUseCompatPadding="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:text="@string/Jan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/CardView02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardUseCompatPadding="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:text="@string/Feb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/CardView03"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardUseCompatPadding="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:text="@string/Mar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/CardView04"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardUseCompatPadding="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:text="@string/Apr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/CardView05"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardUseCompatPadding="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:text="@string/May"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/CardView06"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardUseCompatPadding="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:text="@string/Jun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/CardView07"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardUseCompatPadding="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:text="@string/Jul"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/CardView08"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardUseCompatPadding="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:text="@string/Aug"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/CardView09"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardUseCompatPadding="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:text="@string/Sep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/CardView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardUseCompatPadding="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:text="@string/Oct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/CardView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardUseCompatPadding="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:text="@string/Nov"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/CardView12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                card_view:cardUseCompatPadding="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp"
                    android:gravity="center"
                    >
                    <TextView
                        android:text="@string/Dec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>